<resources>
    <string name="app_name">FITPOST</string>
    <string name="signup_title">Create New Account</string>
    <string name="signin_instead_question">Already Have An Account?</string>
    <string name="signin_text">Log in here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainTextAddPost">I Want To Go</string>
    <string name="mainTextWalking">Walking</string>
    <string name="mainTextRunning">Running</string>
    <string name="mainTextCycling">Cycling</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="start_exercise_button_text">Start Exercise</string>
    <string name="stop_exercise_button_text">Stop Exercise</string>
    <string name="distance_value">%d</string>
    <string name="average_pace_label">Steps taken</string>
    <string name="elapsed_time_label">Elapsed time</string>
    <string name="distance_label">Distance (m)</string>
    <string name="hintTitle">Title</string>
    <string name="hintDescription">Description</string>
    <string name="total_cals_text">Total Calories (monthly)</string>
    <string name="total_dist_text">Total Distance (monthly)</string>
    <string name="total_steps_text">Total Steps (monthly)</string>
    <string name="button_submit_diet">Search meals</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>