<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white_cultured"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white_cultured"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/signup_title"
                android:textColor="@color/blue_dark_cornflower"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupText">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_instead_question"
                    android:textColor="@color/black_raisin" />

                <TextView
                    android:id="@+id/signinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_text"
                    android:textColor="@color/blue_dark_cornflower" />
            </LinearLayout>

            <TextView
                android:id="@+id/nameText"
                android:layout_width="67dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="Username"
                android:textColor="@color/blue_dark_cornflower"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/black_raisin"
                android:textColorHint="@color/black_raisin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Email"
                android:textColor="@color/blue_dark_cornflower"
                app:layout_constraintStart_toStartOf="@+id/nameText"
                app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black_raisin"
                android:textColorHint="@color/black_raisin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailText" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Password"
                android:textColor="@color/blue_dark_cornflower"
                app:layout_constraintStart_toStartOf="@+id/emailText"
                app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black_raisin"
                android:textColorHint="@color/black_raisin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordText" />

            <TextView
                android:id="@+id/genderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Gender"
                android:textColor="@color/blue_dark_cornflower"
                app:layout_constraintStart_toStartOf="@+id/passwordText"
                app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

            <RadioGroup
                android:id="@+id/groupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderText">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </RadioGroup>

            <TextView
                android:id="@+id/dobText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Date of Birth"
                android:textColor="@color/blue_dark_cornflower"
                app:layout_constraintStart_toStartOf="@+id/genderText"
                app:layout_constraintTop_toBottomOf="@+id/groupGender" />

            <EditText
                android:id="@+id/dobEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="Date of Birth"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black_raisin"
                android:textColorHint="@color/black_raisin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dobText" />

            <TextView
                android:id="@+id/weightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Weight (Kg)"
                android:textColor="@color/blue_dark_cornflower"
                app:layout_constraintStart_toStartOf="@+id/dobText"
                app:layout_constraintTop_toBottomOf="@+id/dobEdit" />

            <EditText
                android:id="@+id/weightEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Weight (Kg)"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weightText" />

            <TextView
                android:id="@+id/heightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Height (cm)"
                android:textColor="@color/blue_dark_cornflower"
                app:layout_constraintStart_toStartOf="@+id/weightText"
                app:layout_constraintTop_toBottomOf="@+id/weightEdit" />

            <EditText
                android:id="@+id/heightEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Height (cm)"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightText" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_light_uranium"
                android:shadowColor="@color/black_raisin"
                android:text="Sign Up"
                android:textColor="@color/black_raisin"
                android:textColorHighlight="@color/blue_dark_cornflower"
                android:textColorHint="@color/blue_dark_cornflower"
                android:textColorLink="@color/black_raisin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightEdit"
                app:rippleColor="@color/blue_dark_cornflower"
                app:strokeColor="@color/blue_dark_cornflower" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>